tests/snapshots/integration__integration_tests__config_show__config_show_user_deleted_migration_shows_regenerate_hint.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
[2m↳[22m [2mNot found; to create one, run [90mwt config create[39m[22m

[36mPROJECT CONFIG[39m  _REPO_/.config/wt.toml
[33m▲[39m [33mProject config uses deprecated template variables: [2mmain_worktree[22m → [1mrepo[22m[39m
[2m↳[22m [2mTo regenerate migration file, run [90mwt config state hints clear deprecated-config[39m[22m
[107m [0m post-create = [32m"ln -sf {{ main_worktree }}/node_modules"

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not active[39m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/debug/wt[22m

[2m○[22m [2mSkipped bash; ~/.bashrc not found[22m
[2m○[22m [2mSkipped zsh; ~/.zshrc not found[22m
[2m○[22m [2mSkipped fish; ~/.config/fish/functions not found[22m

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m git: [1m[VERSION][22m
[2m↳[22m [2mClaude Code plugin not installed. To install, run:[22m
[107m [0m [2m[0m[2m[34mclaude[0m[2m plugin marketplace add max-sixty/worktrunk
[107m [0m [2m[0m[2m[34mclaude[0m[2m plugin install worktrunk@worktrunk
[2m○[22m Hyperlinks: [1minactive[22m
